[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arcane2graph"
version = "0.1.0"
description = "Convert Arcane XML/AXL configs to JSON and import into Neo4j graph database"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
keywords = ["arcane", "neo4j", "xml", "json", "graph-database"]

dependencies = [
    "xmltodict>=0.13.0",
    "neo4j>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
arcane2graph = "arcane2graph.merge:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
